# ETL

./: .gitignore  README.md  dockerfile  github_issues.parquet  mypy.ini  pyproject.toml
data/: github_issues.parquet
pipeline/: etl.py  github_issues.ipynb  null_test.py  polars_operation.py
